fix(titlebar): truncate long titles on mobile
fixes #71

--- a/src/components/styles/_page-titlebar.css
+++ b/src/components/styles/_page-titlebar.css
@@ -13,7 +13,12 @@
 }
 
 
-.pg-titlebar__text { padding-right: 5px; }
+.pg-titlebar__text {
+  padding-right: 5px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 
 
 .pg-titlebar__menu-icon {
